# meme-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  ISSUES.md  PLAN.md  README.md  REQUIREMENTS.md  UAT_PLAN.md  UAT_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  update_dependencies.sh
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: CI.yml
backend/: pytest.ini
backend/app/: analysis.py  config.py  database.py  init_db.py  llm.py  main.py  models.py  repository.py  schemas.py  worker.py
backend/tests/: conftest.py  test_api.py  test_units.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: MemeDetailModal.jsx  MemeGrid.jsx  Sidebar.jsx
frontend/src/hooks/: useDetailModal.js  useMemesCollection.js  usePendingPolling.js  useSearch.js  useUpload.js
frontend/src/styles/: app.css
frontend/tests/: app.test.jsx  components.test.jsx  hooks.test.jsx  main.test.jsx
