[project]
name = "meme-organiser"
version = "0.1.0"
description = "Local-first meme library built with FastAPI, React, Vite, and SQLite"
requires-python = ">=3.13"
dependencies = [
  "ImageHash==4.3.2",
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "openai==1.52.2",
  "pillow==10.4.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-multipart==0.0.9",
  "uvicorn==0.30.6",
]

[dependency-groups]
dev = [
  "ipython",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "ruff",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_optional = true


[tool.uv]
default-groups = []
