[project]
name = "meme-organiser"
version = "0.1.0"
description = "Local-first meme library built with FastAPI, React, Vite, and SQLite"
requires-python = ">=3.13"
dependencies = [
  "ImageHash==4.3.2",
  "fastapi==0.115.0",
  "openai==1.52.2",
  "pillow==10.4.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-multipart==0.0.9",
  "uvicorn==0.30.6",
]

[dependency-groups]
dev = [
  "anyio==4.13.0",
  "ipython==9.12.0",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
  "pytest-randomly==4.0.1",
  "ruff==0.15.8",
]

[tool.mypy]
files = ["backend/app"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["backend"]
addopts = "--cov=backend/app --cov-report=term-missing --cov-fail-under=85"

[tool.uv]
default-groups = []
